--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "Homework_2/lib/forge-std"]
+	path = Homework_2/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
